[JBWS-3393] Remove support for AS6 target container
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/stack/native/trunk@15392 50344849-fb0f-0410-a53f-a94597aac05c