@@ -24,7 +24,6 @@
     <test.classes.directory>${project.build.directory}/test-classes</test.classes.directory>
     <test.resources.directory>${project.build.directory}/test-resources</test.resources.directory>
     <wsdl.publish.location>${project.build.directory}/wsdl-publish</wsdl.publish.location>
-    <hibernate.version>3.2.4.sp1</hibernate.version>
     <jboss.javaee.version>5.0.0.GA</jboss.javaee.version>
     <hornetq.version>2.1.0.BETA3</hornetq.version>
     <log4j.output.dir>${project.build.directory}</log4j.output.dir>
@@ -272,10 +271,6 @@
               <value>jnp://${jboss.bind.address}:1099</value>
             </property>
             <property>
-              <name>jboss.server.instance</name>
-              <value>${jboss.server.instance}</value>
-            </property>
-            <property>
               <name>java.protocol.handler.pkgs</name>
               <value>org.jboss.net.protocol|org.jboss.vfs.protocol|org.jboss.virtual.protocol</value>
             </property>
@@ -420,312 +415,6 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <testFailureIgnore>true</testFailureIgnore>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!--
-    Name:  jboss600
-    Descr: JBoss-6.0.0 specific options
-    -->
-    <profile>
-      <id>jboss600</id>
-      <properties>
-        <jboss.version>6.0.0.Final</jboss.version>
-        <jbossws.integration.target>jboss600</jbossws.integration.target>
-        <endorsed.dirs>${project.build.directory}/endorsed</endorsed.dirs>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.jbossas</groupId>
-          <artifactId>jboss-as-depchain</artifactId>
-          <scope>test</scope>
-          <type>pom</type>
-          <version>${jboss.version}</version>
-          <exclusions>
-            <!-- Exclusion for not depending on the container integration -->
-            <exclusion>
-              <groupId>org.jboss.javaee</groupId>
-              <artifactId>jboss-ejb-api</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.jbossas</groupId>
-              <artifactId>jboss-as-webservices</artifactId>
-            </exclusion>
-            <!-- Exclusions for preventing cyclic dependency on JBossWS-CXF -->
-            <exclusion>
-              <groupId>org.jboss.ws.cxf</groupId>
-              <artifactId>jbossws-cxf-client</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.cxf</groupId>
-              <artifactId>jbossws-cxf-management</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.cxf</groupId>
-              <artifactId>jbossws-cxf-server</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.cxf</groupId>
-              <artifactId>jbossws-cxf-factories</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.cxf</groupId>
-              <artifactId>jbossws-cxf-resources</artifactId>
-            </exclusion>
-            <!-- Exclusions for preventing cyclic dependency on JBossWS-Native -->
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-client</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-core</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-factories</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-jaxrpc</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-saaj</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-management</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-resources</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-services</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>jboss.jbossws</groupId>
-              <artifactId>jboss-jaxrpc</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>jboss.jbossws</groupId>
-              <artifactId>jboss-jaxws</artifactId>
-            </exclusion>
-            <!-- Exclusions for preventing http://www.slf4j.org/codes.html#multiple_bindings -->
-            <exclusion>
-              <groupId>org.jboss.slf4j</groupId>
-              <artifactId>slf4j-jboss-logmanager</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.slf4j</groupId>
-              <artifactId>slf4j-log4j12</artifactId>
-            </exclusion>
-            <!-- Exclude Sun's stax implementation : com.sun.xml.stream:sjsxp:jar:1.0.1 --> 
-            <exclusion>
-              <groupId>org.jboss.resteasy</groupId>
-              <artifactId>resteasy-jaxb-provider</artifactId>
-            </exclusion>
-          </exclusions>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <compilerArgument>-Djava.endorsed.dirs=${endorsed.dirs}</compilerArgument>
-            </configuration>
-          </plugin>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>${surefire.jvm.args} ${surefire.jvm.management.args} -Djava.endorsed.dirs=${endorsed.dirs} -Dorg.jboss.wsf.spi.deployer.Deployer=org.jboss.wsf.test.DeployerJBoss6</argLine>
-              <excludes>
-                <!-- # UsernameTokenHTTPSTestCase requires keystore & trustore in jboss-web tomcat configuration-->
-                <exclude>org/jboss/test/ws/interop/nov2007/wsse/UsernameTokenHTTPSTestCase.*</exclude>
-
-                <!-- # [EJBTHREE-1152] service-ref in ejb-jar.xml is ignored-->
-                <exclude>org/jboss/test/ws/jaxws/samples/serviceref/ServiceRefEJBTestCase.*</exclude>
-
-                <!-- # [JBAS-8363] Virtual host issue in JBossWeb -->
-                <exclude>org/jboss/test/ws/jaxws/jbws981/JBWS981TestCase.*</exclude>
-
-                <!-- # [JBWS-3150] This test causes hudson to freeze -->
-                <exclude>org/jboss/test/ws/common/soap/SOAPConnectionTestCase.*</exclude>
-
-                <!-- # [JBWS-3252] Investigate WSA interop tests regression -->
-                <exclude>org/jboss/test/ws/interop/wsa/AddressingTestCase*</exclude>
-
-                <!-- # [AS7-1322] Implemented on AS 7.0.1 or greater only -->
-                <exclude>org/jboss/test/ws/publish/EndpointPublishTestCase*</exclude>
-
-                <!-- # [JBWS-3026] fixed since AS 7.1 -->
-                <exclude>org/jboss/test/ws/jaxws/jbws3026/**</exclude>
-
-                <!-- # [JBWS-3367][AS7-1605] fixed since AS 7.1 -->
-                <exclude>org/jboss/test/ws/jaxws/jbws3367/**</exclude>
-
-                <!-- # [JBWS-3276] fixed since AS 7.1 -->
-                <exclude>org/jboss/test/ws/jaxws/jbws3276/**</exclude>
-              </excludes>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!--
-    Name:  jboss610
-    Descr: JBoss-6.1.0 specific options
-    -->
-    <profile>
-      <id>jboss610</id>
-      <properties>
-        <jboss.version>6.1.0.Final</jboss.version>
-        <jbossws.integration.target>jboss610</jbossws.integration.target>
-        <endorsed.dirs>${project.build.directory}/endorsed</endorsed.dirs>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.jbossas</groupId>
-          <artifactId>jboss-as-depchain</artifactId>
-          <scope>test</scope>
-          <type>pom</type>
-          <version>${jboss.version}</version>
-          <exclusions>
-            <exclusion>
-              <groupId>org.jboss.javaee</groupId>
-              <artifactId>jboss-ejb-api</artifactId>
-            </exclusion>
-            <!-- Exclusion for not depending on the container integration -->
-            <exclusion>
-              <groupId>org.jboss.jbossas</groupId>
-              <artifactId>jboss-as-webservices</artifactId>
-            </exclusion>
-            <!-- Exclusions for preventing cyclic dependency on JBossWS-CXF -->
-            <exclusion>
-              <groupId>org.jboss.ws.cxf</groupId>
-              <artifactId>jbossws-cxf-client</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.cxf</groupId>
-              <artifactId>jbossws-cxf-management</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.cxf</groupId>
-              <artifactId>jbossws-cxf-server</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.cxf</groupId>
-              <artifactId>jbossws-cxf-factories</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.cxf</groupId>
-              <artifactId>jbossws-cxf-resources</artifactId>
-            </exclusion>
-            <!-- Exclusions for preventing cyclic dependency on JBossWS-Native -->
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-client</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-core</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-factories</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-jaxrpc</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-saaj</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-management</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-resources</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.jboss.ws.native</groupId>
-              <artifactId>jbossws-native-services</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>jboss.jbossws</groupId>
-              <artifactId>jboss-jaxrpc</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>jboss.jbossws</groupId>
-              <artifactId>jboss-jaxws</artifactId>
-            </exclusion>
-            <!-- Exclusions for preventing http://www.slf4j.org/codes.html#multiple_bindings -->
-            <exclusion>
-              <groupId>org.jboss.slf4j</groupId>
-              <artifactId>slf4j-jboss-logmanager</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.slf4j</groupId>
-              <artifactId>slf4j-log4j12</artifactId>
-            </exclusion>
-            <!-- Exclude Sun's stax implementation : com.sun.xml.stream:sjsxp:jar:1.0.1 --> 
-            <exclusion>
-              <groupId>org.jboss.resteasy</groupId>
-              <artifactId>resteasy-jaxb-provider</artifactId>
-            </exclusion>
-          </exclusions>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <compilerArgument>-Djava.endorsed.dirs=${endorsed.dirs}</compilerArgument>
-            </configuration>
-          </plugin>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>${surefire.jvm.args} ${surefire.jvm.management.args} -Djava.endorsed.dirs=${endorsed.dirs} -Dorg.jboss.wsf.spi.deployer.Deployer=org.jboss.wsf.test.DeployerJBoss6</argLine>
-              <excludes>
-                <!-- # UsernameTokenHTTPSTestCase requires keystore & trustore in jboss-web tomcat configuration-->
-                <exclude>org/jboss/test/ws/interop/nov2007/wsse/UsernameTokenHTTPSTestCase.*</exclude>
-
-                <!-- # [EJBTHREE-1152] service-ref in ejb-jar.xml is ignored-->
-                <exclude>org/jboss/test/ws/jaxws/samples/serviceref/ServiceRefEJBTestCase.*</exclude>
-
-                <!-- # [JBAS-8363] Virtual host issue in JBossWeb -->
-                <exclude>org/jboss/test/ws/jaxws/jbws981/JBWS981TestCase.*</exclude>
-
-                <!-- # [JBWS-3150] This test causes hudson to freeze -->
-                <exclude>org/jboss/test/ws/common/soap/SOAPConnectionTestCase.*</exclude>
-
-                <!-- # [JBWS-3252] Investigate WSA interop tests regression -->
-                <exclude>org/jboss/test/ws/interop/wsa/AddressingTestCase*</exclude>
-
-                <!-- # [AS7-1322] Implemented on AS 7.0.1 or greater only -->
-                <exclude>org/jboss/test/ws/publish/EndpointPublishTestCase*</exclude>
-
-                <!-- # [JBWS-3026] fixed since AS 7.1 -->
-                <exclude>org/jboss/test/ws/jaxws/jbws3026/**</exclude>
-
-                <!-- # [JBWS-3367][AS7-1605] fixed since AS 7.1 -->
-                <exclude>org/jboss/test/ws/jaxws/jbws3367/**</exclude>
-
-                <!-- # [JBWS-3276] fixed since AS 7.1 -->
-                <exclude>org/jboss/test/ws/jaxws/jbws3276/**</exclude>
-              </excludes>
             </configuration>
           </plugin>
         </plugins>
@@ -1555,25 +1244,6 @@
       </properties>
     </profile>
 
-  <!--
-    Name:  no-jboss-server-instance
-    Descr: Set the default jboss.server.instance
-
-    command line cannot overwrite pom properties
-    http://jira.codehaus.org/browse/MNG-3546
-    -->
-    <profile>
-      <id>no-jboss-server-instance</id>
-      <activation>
-        <property>
-          <name>!jboss.server.instance</name>
-        </property>
-      </activation>
-      <properties>
-        <jboss.server.instance>default</jboss.server.instance>
-      </properties>
-    </profile>
-    
     <profile>
       <id>default-mgmt-security</id>
       <activation>
